# transcriptionapp

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  CODE_REVIEW_FINDINGS.md  README.md
docs/: DEVELOPMENT.md  (+19 more)
profile-service/: CLAUDE.md  Cargo.toml
profile-service/src/: auth.rs  error.rs  lib.rs  main.rs  types.rs
profile-service/src/routes/: config_data.rs  health.rs  infrastructure.rs  medplum_auth.rs  mobile.rs  mod.rs  openai_image.rs  patients.rs  physicians.rs  rooms.rs  sessions.rs  speakers.rs
profile-service/src/store/: config_data.rs  infrastructure.rs  medplum_auth.rs  mobile_jobs.rs  mod.rs  openai_image.rs  patients.rs  physicians.rs  rooms.rs  sessions.rs  speakers.rs
profile-service/tests/: auth_tests.rs  config_data_tests.rs  infrastructure_tests.rs  patient_tests.rs  physician_tests.rs  room_tests.rs  session_tests.rs  speaker_tests.rs
profile-service/tests/common/: mod.rs
tauri-app/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  mutants.toml  tauri.conf.json
tauri-app/src-tauri/benches/: audio_benchmarks.rs
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/fuzz/: Cargo.toml
tauri-app/src-tauri/fuzz/fuzz_targets/: fuzz_audio_samples.rs  fuzz_segment.rs  fuzz_vad_config.rs  fuzz_vad_pipeline.rs
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: activity_log.rs  audio.rs  audio_processing.rs  audio_upload_queue.rs  checklist.rs  co2_calibration.rs  command_tests.rs  commands.rs  config.rs  continuous_mode.rs  continuous_mode_events.rs  continuous_mode_flush_on_stop.rs  continuous_mode_forward_merge.rs  continuous_mode_merge_back.rs  continuous_mode_post_split.rs  continuous_mode_splitter.rs  continuous_mode_trigger_wait.rs  continuous_mode_types.rs  day_log.rs  debug_storage.rs  e2e_tests.rs  encounter_detection.rs  encounter_experiment.rs  encounter_merge.rs  encounter_pipeline.rs  feedback_to_label.rs  gemini_client.rs  lib.rs  listening.rs  llm_backend.rs  llm_client.rs  local_archive.rs  main.rs  medication_extraction.rs  medplum.rs  models.rs  native_stt.rs  native_stt_shadow.rs  ollama.rs  on_device_llm.rs  (+35 more)
tauri-app/src-tauri/src/billing/: clinical_features.rs  diagnostic_codes.rs  diagnostic_codes.txt  diagnostic_tools_model.rs  mod.rs  ohip_codes.rs  procedure_vocab.rs  rule_engine.rs  time_tracking.rs  types.rs  upgrade_suggestions.rs
tauri-app/src-tauri/src/biomarkers/: audio_quality.rs  config.rs  mod.rs  thread.rs
tauri-app/src-tauri/src/biomarkers/session_metrics/: mod.rs
tauri-app/src-tauri/src/biomarkers/voice_metrics/: mod.rs  stability.rs  vitality.rs
tauri-app/src-tauri/src/biomarkers/yamnet/: mod.rs  sliding_window.rs
tauri-app/src-tauri/src/commands/: archive.rs  audio.rs  audio_upload.rs  billing.rs  calibration.rs  clinical_chat.rs  continuous.rs  images.rs  listening.rs  medication.rs  medplum.rs  miis.rs  mod.rs  models.rs  ollama.rs  ort_health.rs  permissions.rs  physicians.rs  screenshot.rs  session.rs  settings.rs  speaker_profiles.rs  whisper_server.rs
tauri-app/src-tauri/src/diarization/: clustering.rs  config.rs  embedding.rs  mel.rs  mod.rs  provider.rs
tauri-app/src-tauri/src/emotion/: mod.rs  provider.rs
tauri-app/src-tauri/src/enhancement/: mod.rs  provider.rs
tauri-app/src-tauri/src/experiment/: labels.rs  mod.rs  replay.rs  report.rs  runner.rs  variant.rs
tauri-app/src-tauri/src/harness/: archive_comparator.rs  captured_event.rs  day_harness.rs  driver.rs  encounter_harness.rs  event_comparator.rs  mismatch_report.rs  mod.rs  policies.rs  recording_run_context.rs  replay_llm_backend.rs  scripted_sensor_source.rs  test_env.rs
tauri-app/src-tauri/src/mcp/: error_counter.rs  handlers.rs  mod.rs  server.rs  types.rs
tauri-app/src-tauri/src/presence_sensor/: absence_monitor.rs  co2.rs  csv_logger.rs  debounce.rs  fusion.rs  mod.rs  sensor_source.rs  thermal.rs  types.rs
tauri-app/src-tauri/src/presence_sensor/sources/: esp32_http.rs  mock.rs  mod.rs  serial.rs
tauri-app/src-tauri/swift/: on_device_llm.swift
tauri-app/src-tauri/tests/: harness_per_encounter.rs  harness_smoke.rs
tauri-app/src-tauri/tests/fixtures/benchmarks/: billing.json  clinical_content_check.json  encounter_detection.json  encounter_merge.json  multi_patient_detection.json  multi_patient_split.json  soap.json
tauri-app/src-tauri/tests/fixtures/billing_sim_2026_04_24/: README.md
tauri-app/src-tauri/tests/fixtures/day_summaries/: 2026-04-27_day_summary.json
tauri-app/src-tauri/tests/fixtures/labels/: 2026-04-08_0922dfe5.json  2026-04-08_26d1f288.json  2026-04-08_2fa9ada3.json  2026-04-08_3a56b11f.json  2026-04-08_4ca6c54e.json  2026-04-08_574926de.json  2026-04-08_5ac851da.json  2026-04-08_5c2a50a1.json  2026-04-08_688f19e9.json  2026-04-08_8183743c.json  2026-04-08_883690dd.json  2026-04-08_c976c90f.json  2026-04-08_cd2ee4b2.json  2026-04-08_cd5d3c66.json  2026-04-08_e84ed7f0.json  2026-04-08_f4425169.json  2026-04-08_f68af765.json  2026-04-09_26c46cc5.json  2026-04-09_54c036a2.json  2026-04-09_54f39eac.json  2026-04-09_6a6abdc4.json  2026-04-09_8188ff4f.json  2026-04-09_8d205075.json  2026-04-09_b25f029c.json  2026-04-10_0a3a8f68.json  2026-04-10_21b8ceaa.json  2026-04-10_3e1f7561.json  2026-04-10_3fdb696b.json  2026-04-10_67b415d0.json  (+107 more)
tauri-app/src-tauri/tools/: benchmark_runner.rs  billing_experiment_cli.rs  bootstrap_labels.rs  clinical_replay_cli.rs  detection_replay_cli.rs  encounter_experiment_cli.rs  forensic_2026_04_30_replay.rs  golden_day_cli.rs  labeled_regression_cli.rs  merge_replay_cli.rs  multi_patient_replay_cli.rs  multi_patient_split_replay_cli.rs  ort_smoke.rs  replay_bundle_backfill.rs  soap_diff_cli.rs  soap_experiment_cli.rs  vision_experiment_cli.rs
tauri-app/src-tauri/tools/billing_experiment_riders/: dx_cot.txt  procedure_stance.txt  strict_cond.txt  visit_guide.txt
transcribe-cli/: Cargo.toml
transcribe-cli/src/: config.rs  main.rs
transcribe-cli/src/audio/: capture.rs  mod.rs  processor.rs  resampler.rs
transcribe-cli/src/transcription/: mod.rs  segment.rs  whisper_provider.rs
transcribe-cli/src/vad/: mod.rs  pipeline.rs
(+345 files in other folders)
