[package]
name = "transcribe-cli"
version = "0.1.0"
edition = "2021"
description = "Headless CLI for offline speech transcription using Whisper"
license = "MIT"

[dependencies]
# Audio capture
cpal = "0.15"

# Lock-free ring buffer
ringbuf = "0.4"

# High-quality resampling
rubato = "0.16"

# Voice Activity Detection (Silero VAD)
voice_activity_detector = "0.2"

# Whisper bindings
whisper-rs = "0.13"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Async runtime (for graceful shutdown)
tokio = { version = "1", features = ["rt-multi-thread", "sync", "signal", "macros"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization (for settings/config)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID for segment IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory paths
dirs = "5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "transcribe-cli"
path = "src/main.rs"
