[package]
name = "transcription-app"
version = "0.1.0"
description = "Local Transcription App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
default-run = "transcription-app"

[lib]
name = "transcription_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
libc = "0.2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.15"

# Lock-free ring buffer
ringbuf = "0.4"

# High-quality resampling
rubato = "0.16"

# Voice Activity Detection (Silero VAD)
voice_activity_detector = "0.2"


# Speaker diarization (ONNX embeddings)
ort = { version = "2.0.0-rc.9", default-features = false, features = ["load-dynamic"], optional = true }
realfft = { version = "3.3", optional = true }

# FFT for speech enhancement and CPP stability metric
rustfft = { version = "6.2", optional = true }

# Pitch detection for vitality metric
pitch-detection = "0.3"

# Audio preprocessing (AGC, high-pass filter)
dagc = "0.1"
biquad = "0.4"

# WAV file writing for audio recording
hound = "3.5"

# ndarray for ONNX tensor operations (used by YAMNet)
ndarray = "0.16"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# HTTP client for model downloads and Ollama API
reqwest = { version = "0.12", features = ["blocking", "stream", "json", "multipart"] }
futures-util = "0.3"

# MCP server (HTTP/JSON-RPC)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
hostname = "0.4"

# Medplum OAuth PKCE support
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2.5"
urlencoding = "2.1"

# Error handling
anyhow = "1"
thiserror = "1"

# Image encoding for screenshots
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# macOS permissions (microphone access check) and screen capture
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString"] }
objc2-av-foundation = { version = "0.3", features = ["AVCaptureDevice", "AVMediaFormat"] }
core-graphics = "0.24"
core-foundation = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# UUID for segment IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Directory paths
dirs = "5"

[dev-dependencies]
# Property-based testing
proptest = "1.5"
# Temporary directories for tests
tempfile = "3"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Serial test execution for tests with shared state
serial_test = "3.2"

[features]
# This feature is used for production builds or when a dev server is not specified
custom-protocol = ["tauri/custom-protocol"]
# Speaker diarization support
diarization = ["ort", "realfft"]
# Speech enhancement (GTCRN denoising)
enhancement = ["ort", "rustfft"]
# Biomarker analysis (YAMNet cough detection, vitality, stability)
biomarkers = ["ort", "rustfft"]
default = ["diarization", "enhancement", "biomarkers"]

[[bin]]
name = "vision_experiment_cli"
path = "tools/vision_experiment_cli.rs"

[[bench]]
name = "audio_benchmarks"
harness = false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
